--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Travelling Potato</title>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-    <link rel="stylesheet" href="css/commons.css" />
-    <link rel="stylesheet" href="css/style.css" />
-</head>
-<body>
 
 <nav class="navbar navbar-toggleable-sm fixed-top navbar-light bg-faded site-navigation">
     <div class="container">
@@ -28,11 +18,13 @@
                 </li>
                 <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
                 <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-                <li class="nav-item"><a class="nav-link btn-default" href="#login">Login</a></li>
+                <li class="nav-item"><a id="login_button" class="nav-link btn-default">Login</a></li>
             </ul>
         </div>
     </div>
 </nav>
+
+<div class="backdrop"></div>
 
 <section id="home">
     <div class="container">
@@ -142,14 +134,5 @@
 <section id="about"></section>
 <section id="contact"></section>
 
+<div id="booking_modal_container" class="container modal trip-modal"></div>
 
-<div id="booking_modal_container"></div>
-
-<script type="application/javascript" src="/node_modules/jquery/dist/jquery.min.js"></script>
-<script type="application/javascript" src="/node_modules/jquery-ui-dist/jquery-ui.min.js"></script>
-<script type="application/javascript" src="/node_modules/underscore/underscore-min.js"></script>
-<script type="application/javascript" src="/js/video.js"></script>
-<script type="application/javascript" src="/js/scripts.js"></script>
-
-</body>
-</html>
