--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,8 @@
 
-<nav class="navbar navbar-toggleable-sm fixed-top navbar-light bg-faded site-navigation">
+<nav class="navbar site-navigation">
     <div class="container">
         <a class="navbar-brand" href="#"><img class="logo-image" src="/images/logo4.png" alt=""></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-            <i class="icon-menu"></i>
-        </button>
-        <div class="collapse navbar-collapse justify-content-end" id="navbarCollapse">
+        <div class="collapse navbar-collapse">
             <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link active" href="#home">Home</a></li>
                 <li class="nav-item">
@@ -31,9 +28,9 @@
         <div class="row">
             <div class="col col-md-12 text-center">
                 <div class="hero-text">
-                    <h1><span class="rotate" style="text-shadow: black 0px 0px 0px; opacity: 1;">Ahoy, awesome Potato!</span></h1>
+                    <h1>Ahoy, awesome Potato!</h1>
                     <p>Discover the places you've never been before!</p>
-                    <a href="#mostpopulartrips" class="btn btn-default btn-home-bg">Find tour</a>
+                    <a href="#mostpopulartrips" class="btn btn-default">Find tour</a>
                 </div>
             </div>
         </div>
@@ -46,7 +43,7 @@
             <h2>Most Popular Trips</h2>
         </div>
         <div class="row">
-            <div class="col-md-6 fadeInLeft">
+            <div class="col-sm-12 col-md-6 fadeInLeft">
                 <div class="thumb">
                     <img src="/images/tour1.jpg" alt="Image 2">
                     <div class="thumb__overlay"></div>
@@ -54,7 +51,7 @@
                         <h3>Hiking in the<br>Altai</h3>
                         <h6>Culinary adventure</h6>
                         <p>10 days, 9 nights<br>From $590</p>
-                        <a class="btn btn-default btn-mazin-1 book-trip" data-tripid="1" href="javascript:void(0)">Book trip</a>
+                        <a class="btn btn-default book-trip" data-tripid="1" href="javascript:void(0)">Book trip</a>
                     </div>
                 </div>
 
@@ -65,11 +62,11 @@
                         <h3>Hiking in the<br>Altai</h3>
                         <h6>Culinary adventure</h6>
                         <p>10 days, 9 nights<br>From $590</p>
-                        <a class="btn btn-default btn-mazin-1" href="javascript:void(0)">Book trip</a>
+                        <a class="btn btn-default book-trip" data-tripid="2" href="javascript:void(0)">Book trip</a>
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 fadeInRight">
+            <div class="col-sm-12 col-md-6 fadeInRight">
                 <div class="thumb">
                     <img src="/images/tour4.jpg" alt="Image 2">
                     <div class="thumb__overlay"></div>
@@ -77,7 +74,7 @@
                         <h3>Hiking in the<br>Altai</h3>
                         <h6>Culinary adventure</h6>
                         <p>10 days, 9 nights<br>From $590</p>
-                        <a class="btn btn-default btn-mazin-1" href="javascript:void(0)">Book trip</a>
+                        <a class="btn btn-default book-trip"  data-tripid="3" href="javascript:void(0)">Book trip</a>
                     </div>
                 </div>
                 <div class="thumb">
@@ -87,7 +84,7 @@
                         <h3>Hiking in the<br>Altai</h3>
                         <h6>Culinary adventure</h6>
                         <p>10 days, 9 nights<br>From $590</p>
-                        <a class="btn btn-default btn-mazin-1" href="javascript:void(0)">Book trip</a>
+                        <a class="btn btn-default" href="javascript:void(0)">Book trip</a>
                     </div>
                 </div>
             </div>
@@ -101,7 +98,7 @@
             <h2>Best Offers</h2>
         </div>
         <div class="row">
-            <div class="col-md-6 fadeInLeft">
+            <div class="col-sm-12 col-md-6">
                 <div class="thumb">
                     <img src="/images/tour3.jpg" alt="Image 2">
                     <div class="thumb__overlay"></div>
@@ -109,11 +106,11 @@
                         <h3>Hiking in the<br>Altai</h3>
                         <h6>Culinary adventure</h6>
                         <p>10 days, 9 nights<br>From $590</p>
-                        <a class="btn btn-default btn-mazin-1" href="javascript:void(0)">Book trip</a>
+                        <a class="btn btn-default" href="javascript:void(0)">Book trip</a>
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 fadeInRight">
+            <div class="col-sm-12 col-md-6">
                 <div class="thumb">
                     <img src="/images/tour6.jpg" alt="Image 2">
                     <div class="thumb__overlay"></div>
@@ -121,7 +118,7 @@
                         <h3>Hiking in the<br>Altai</h3>
                         <h6>Culinary adventure</h6>
                         <p>10 days, 9 nights<br>From $590</p>
-                        <a class="btn btn-default btn-mazin-1" href="javascript:void(0)">Book trip</a>
+                        <a class="btn btn-default" href="javascript:void(0)">Book trip</a>
                     </div>
                 </div>
             </div>
