--- a/templates/partials/login_form.html
+++ b/templates/partials/login_form.html
@@ -18,7 +18,7 @@
                                 <input type="submit" name="login-submit" id="login-submit" tabindex="4" class="form-control btn btn-login" value="Log In">
                             </div>
                         </div>
-                        <div id="register-form" style="display: none;">
+                        <form id="register-form" style="display: none;">
                             <h2>REGISTER</h2>
                             <div class="form-group">
                                 <input type="text" name="firstname" id="firstname" tabindex="1" class="form-control mandatory" placeholder="First Name *" value="">
@@ -35,14 +35,10 @@
                             <div class="form-group">
                                 <input type="password" name="confirm-password" id="confirm-password" tabindex="2" class="form-control mandatory confirm-pass" placeholder="Confirm Password *">
                             </div>
-                            <div class="form-group">
-                                <div class="row">
-                                    <div class="col-sm-6 col-sm-offset-3">
-                                        <input type="submit" name="register-submit" id="register-submit" tabindex="4" class="form-control btn btn-register" value="Register Now">
-                                    </div>
-                                </div>
+                            <div class="col-lg-6 form-group pull-right">
+                                <input type="submit" name="register-submit" id="register-submit" tabindex="4" class="form-control btn btn-register" value="Register Now">
                             </div>
-                        </div>
+                        </form>
                     </div>
                 </div>
             </div>
