--- a/templates/site_end.html
+++ b/templates/site_end.html
@@ -1,8 +1,10 @@
 
 <script src="/node_modules/jquery/dist/jquery.min.js"></script>
 <script src="/node_modules/underscore/underscore-min.js"></script>
+<script src="/js/Register.js"></script>
+<script src="/js/Login.js"></script>
+<script src="/js/Chat.js"></script>
 <script src="/js/video.js"></script>
-<script src="/js/user.js"></script>
 <script src="/js/scripts.js"></script>
 
 </body>
