--- a/public/css/style.css
+++ b/public/css/style.css
@@ -106,6 +106,11 @@ a.nav-link.btn-default {
     padding: 10px 15px;
 }
 
+.form-error, .invalid-data {
+    color: #b41111;
+    padding: 0 30px;
+}
+
 /* Home */
 #home {
     position: relative;
@@ -385,4 +390,85 @@ button.close-modal:hover {
 
 .mandatory:after {
     content: '*';
+}
+
+/* Chat */
+.chat-header {
+    background-color: #91908f;
+    border-radius: 5px 5px 0 0;
+    cursor: pointer;
+}
+
+.chat-header:hover, .chat-header:active, .chat-header:focus {
+    background-color: #4caf50;
+}
+
+.chat-box {
+    position: fixed;
+    bottom: 0;
+    right: 30px;
+    margin: 0 30px;
+}
+
+.chat-box > div {
+    padding: 5px 20px;
+}
+
+.chat-widget {
+    width: 300px;
+    height: 400px;
+    background-color: #efefef;
+}
+
+.single-message {
+    width: 100%;
+    display: inline-table;
+}
+
+.single-message:first-of-type {
+    margin-top: 10px;
+}
+
+.single-message > span {
+    background-color: #bababa;
+    padding: 5px 15px;
+    border-radius: 20px;
+    display: table;
+    max-width: 230px;
+    line-height: 1.2em;
+    font-size: 15px;
+}
+
+#conversation_content {
+    max-height: 320px;
+    overflow-y: scroll;
+    margin: 0 -20px;
+    display: flex;
+    flex-direction: column-reverse;
+}
+
+.chat-messages-list {
+    padding: 0 15px;
+}
+
+.single-message.right > span {
+    text-align: right;
+    width: auto;
+    float: right;
+    background-color: #4caf50;
+}
+
+.input-container {
+    position: absolute;
+    bottom: 0;
+    width: 285px;
+    left: 0;
+    padding: 10px 13px;
+}
+
+.input-container textarea {
+    resize: none;
+    padding: 15px;
+    width: 100%;
+    height: 1.5em;
 }
