--- a/templates/partials/login_form.html
+++ b/templates/partials/login_form.html
@@ -5,7 +5,7 @@
             <div class="panel-body">
                 <div class="row">
                     <div class="col-lg-12">
-                        <div id="login-form" style="display: block;">
+                        <form id="login-form" style="display: block;">
                             <h2>LOGIN</h2>
                             <p class="hidden invalid-data">The provided email or password are incorrect.</p>
                             <div class="form-group">
@@ -17,7 +17,7 @@
                             <div class="col-lg-6 form-group pull-right">
                                 <input type="submit" name="login-submit" id="login-submit" tabindex="4" class="form-control btn btn-login" value="Log In">
                             </div>
-                        </div>
+                        </form>
                         <form id="register-form" style="display: none;">
                             <h2>REGISTER</h2>
                             <div class="form-group">
@@ -33,8 +33,9 @@
                                 <input type="password" name="password" id="password" tabindex="2" class="form-control mandatory pass" placeholder="Password *">
                             </div>
                             <div class="form-group">
-                                <input type="password" name="confirm-password" id="confirm-password" tabindex="2" class="form-control mandatory confirm-pass" placeholder="Confirm Password *">
+                                <input type="password" name="confirm_password" id="confirm-password" tabindex="2" class="form-control mandatory confirm-pass" placeholder="Confirm Password *">
                             </div>
+                            <p class="form-error"></p>
                             <div class="col-lg-6 form-group pull-right">
                                 <input type="submit" name="register-submit" id="register-submit" tabindex="4" class="form-control btn btn-register" value="Register Now">
                             </div>
