--- a/public/css/style.css
+++ b/public/css/style.css
@@ -393,21 +393,28 @@ button.close-modal:hover {
 }
 
 /* Chat */
-.chat-header {
+.toggle-chat {
     background-color: #91908f;
     border-radius: 5px 5px 0 0;
     cursor: pointer;
 }
 
-.chat-header:hover, .chat-header:active, .chat-header:focus {
+.toggle-chat:hover, .toggle-chat:active, .toggle-chat:focus {
     background-color: #4caf50;
 }
 
-.chat-box {
+.all-chats-container {
     position: fixed;
     bottom: 0;
-    right: 30px;
-    margin: 0 30px;
+    display: table;
+    right: 50px;
+}
+
+.chat-box {
+    position: relative;
+    margin: 0 10px;
+    display: table-cell;
+    float: right;
 }
 
 .chat-box > div {
@@ -471,4 +478,54 @@ button.close-modal:hover {
     padding: 15px;
     width: 100%;
     height: 1.5em;
+}
+
+/* All chats widget style */
+.single-chat {
+    height: 50px;
+    color: #333;
+    border-bottom: 1px solid rgba(145, 144, 143, 0.5);
+    display: table;
+    vertical-align: middle;
+    width: 100%;
+    position: relative;
+    cursor: pointer;
+}
+
+.single-chat:hover {
+    background-color: rgba(204, 204, 204, 0.77);
+}
+
+.single-chat-name {
+    margin: 10px;
+    border-radius: 30px;
+    display: table-cell;
+    padding: 10px 20px 10px 40px;
+}
+
+.single-chat:before {
+    content: "\f2bd";
+    font-family: Font Awesome\ 5 Free, serif;
+    font-size: 25px;
+    position: absolute;
+    display: table-cell;
+    top: 10px;
+    color: #4caf50;
+}
+
+.circle-label {
+    background-color: #4caf50;
+    padding: 4px 7px;
+    margin-left: 5px;
+    border-radius: 30px;
+    color: #fff;
+    font-size: 11px;
+}
+
+.timestamp {
+    font-size: 14px;
+}
+
+.timestamp.active {
+    color: #4caf50;
 }
