--- a/templates/index.html
+++ b/templates/index.html
@@ -136,15 +136,27 @@
 <div id="booking_modal_container" class="container modal trip-modal"></div>
 
 <?php if(isset($_SESSION['user'])) { ?>
-    <div class="chat-container container">
-        <div class="chat-box">
-            <div class="chat-header <?= $_SESSION['user']['is_admin'] ? 'admin' : 'user' ?>">Chat</div>
-            <div id="conversation_container" class="chat-widget hidden">
-                <div id="conversation_content"></div>
-                <div class="input-container">
-                    <textarea class="message-input" placeholder="Ask us a question..."></textarea>
+    <div class="all-chats-container chat-container container">
+
+        <?php if(!$_SESSION['user']['is_admin']) { ?>
+            <div class="chat-box">
+                <div class="toggle-chat chat-header <?= $_SESSION['user']['is_admin'] ? 'admin' : 'user' ?>">Chat</div>
+                <div id="conversation_container" class="chat-widget hidden">
+                    <div id="conversation_content"></div>
+                    <div class="input-container">
+                        <textarea class="message-input" placeholder="Ask us a question..."></textarea>
+                    </div>
                 </div>
             </div>
-        </div>
+        <?php } ?>
+
+        <?php if($_SESSION['user']['is_admin']) { ?>
+            <div class="chat-box left-box">
+                <div class="toggle-chat chat-header all-chats">All chats</div>
+                <div id="chats_container" class="chat-widget hidden">
+                    <div id="all_chats_content"></div>
+                </div>
+            </div>
+        <?php } ?>
     </div>
 <?php } ?>
