--- a/templates/site_end.html
+++ b/templates/site_end.html
@@ -1,5 +1,11 @@
 
+<script>
+    window.user = <?= isset($_SESSION['user']) ? json_encode($_SESSION['user']) : 'null' ?>;
+</script>
+
 <script src="/node_modules/jquery/dist/jquery.min.js"></script>
+<script src="/node_modules/moment/min/moment.min.js"></script>
+<script src="/node_modules/moment-timezone/builds/moment-timezone-with-data.min.js"></script>
 <script src="/node_modules/underscore/underscore-min.js"></script>
 <script src="/js/Register.js"></script>
 <script src="/js/Login.js"></script>
