--- a/templates/partials/login_form.html
+++ b/templates/partials/login_form.html
@@ -4,7 +4,7 @@
         <div class="panel panel-login">
             <div class="panel-body">
                 <div class="row">
-                    <div class="col-lg-12">
+                    <div class="col-sm-12">
                         <form id="login-form" style="display: block;">
                             <h2>LOGIN</h2>
                             <p class="hidden invalid-data">The provided email or password are incorrect.</p>
@@ -14,7 +14,7 @@
                             <div class="form-group">
                                 <input type="password" name="password" id="login-password" tabindex="2" class="form-control" placeholder="Password">
                             </div>
-                            <div class="col-lg-6 form-group pull-right">
+                            <div class="col-sm-6 form-group pull-right">
                                 <input type="submit" name="login-submit" id="login-submit" tabindex="4" class="form-control btn btn-login" value="Log In">
                             </div>
                         </form>
@@ -36,7 +36,7 @@
                                 <input type="password" name="confirm_password" id="confirm-password" tabindex="2" class="form-control mandatory confirm-pass" placeholder="Confirm Password *">
                             </div>
                             <p class="form-error"></p>
-                            <div class="col-lg-6 form-group pull-right">
+                            <div class="col-sm-6 form-group pull-right">
                                 <input type="submit" name="register-submit" id="register-submit" tabindex="4" class="form-control btn btn-register" value="Register Now">
                             </div>
                         </form>
@@ -45,10 +45,10 @@
             </div>
             <div class="panel-heading">
                 <div class="row">
-                    <div class="col-lg-6 tabs">
+                    <div class="col-sm-6 tabs">
                         <a href="#" class="active" id="login-form-link"><div class="login">LOGIN</div></a>
                     </div>
-                    <div class="col-lg-6 tabs">
+                    <div class="col-sm-6 tabs">
                         <a href="#" id="register-form-link"><div class="register">REGISTER</div></a>
                     </div>
                 </div>
