--- a/templates/site_end.html
+++ b/templates/site_end.html
@@ -7,9 +7,16 @@
 <script src="/node_modules/moment/min/moment.min.js"></script>
 <script src="/node_modules/moment-timezone/builds/moment-timezone-with-data.min.js"></script>
 <script src="/node_modules/underscore/underscore-min.js"></script>
+<script src="/library/daterangepicker.min.js"></script>
+
+<script src="node_modules/jquery-ui/ui/widget.js"></script>
+<script src="library/jquery.iframe-transport.js"></script>
+<script src="library/jquery.fileupload.js"></script>
+
 <script src="/js/Register.js"></script>
 <script src="/js/Login.js"></script>
 <script src="/js/Chat.js"></script>
+<script src="/js/Trip.js"></script>
 <script src="/js/video.js"></script>
 <script src="/js/scripts.js"></script>
 
