--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,8 @@
 
 body {
     color: #ffffff;
-    font-family: 'Open Sans', sans-serif;
-    font-size: 1rem;
+    font-family: "Montserrat",sans-serif;
+    font-size: 14px;
     font-weight: 400;
     line-height: 28px;
     background: #282828;
@@ -165,10 +165,11 @@ a.nav-link.btn-default {
 
 .thumb {
     position: relative;
-    display: block;
     overflow: hidden;
     height: 350px;
     margin: 15px;
+    display: inline-block;
+    width: 47%;
 }
 
 .thumb__overlay {
@@ -218,6 +219,8 @@ a.nav-link.btn-default {
 
 .thumb > img {
     width: 100%;
+    min-height: 100%;
+    background-size: cover;
 }
 
 .thumb__title h3, .thumb__title p {
@@ -261,7 +264,7 @@ section#tours, section#services, section#gallery, section#contact
 
 /* Book trip modal */
 
-#booking_modal_container {
+.trip-modal {
     position: fixed;
     top: 90px;
     background-color: rgba(0, 0, 0, 0.8);
@@ -272,8 +275,16 @@ section#tours, section#services, section#gallery, section#contact
     overflow-y: auto;
 }
 
-#booking_modal_container .col-md-6 {
-    max-width: calc(50% - 30px);
+@media (max-width: 991px) {
+    .thumb {
+        width: 100%;
+    }
+}
+
+@media (max-width: 768px) {
+    .trip-modal {
+        width: 90%;
+    }
 }
 
 button.close-modal {
@@ -404,6 +415,10 @@ button.close-modal:hover {
     color: #eee;
 }
 
+.toggle-chat.active {
+    background: #4caf50;
+}
+
 .toggle-chat i:hover {
     margin-top: 6px;
     color: #d30000;
@@ -415,9 +430,8 @@ button.close-modal:hover {
 
 .all-chats-container {
     position: fixed;
-    bottom: 0;
-    display: table;
-    right: 50px;
+    bottom: -402px;
+    right: 0;
 }
 
 .chat-box {
@@ -427,11 +441,11 @@ button.close-modal:hover {
     float: right;
     width: 340px;
     height: 440px;
-    bottom: 0
+    bottom: 402px;
 }
 
 .chat-box.hidden {
-    bottom: -402px;
+    bottom: 0;
 }
 
 .chat-box > div {
@@ -469,7 +483,7 @@ button.close-modal:hover {
 
 .conversation-content {
     max-height: 320px;
-    overflow-y: scroll;
+    overflow-y: auto;
     margin: 0 -20px;
     display: flex;
     flex-direction: column-reverse;
@@ -549,4 +563,106 @@ button.close-modal:hover {
 
 .timestamp.active {
     color: #4caf50;
+}
+
+#add_trip_modal_container {
+    padding: 30px;
+    height: auto;
+    top: 100px;
+}
+
+#add_trip_modal_container .form-control {
+    max-width: 80%;
+    margin-bottom: 15px;
+}
+
+#add_trip_modal_container .upload-field {
+    margin-top: 30px;
+}
+
+/* Upload buttons */
+.upload-btn-wrapper {
+    position: relative;
+}
+
+input.file {
+    height: 20px;
+    border: 1px solid #BBB;
+    border-right: 0;
+    color: #888;
+    padding: 8px;
+
+    -webkit-border-top-left-radius: 5px;
+    -webkit-border-bottom-left-radius: 5px;
+    -moz-border-radius-topleft: 5px;
+    -moz-border-radius-bottomleft: 5px;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+
+    outline: none;
+}
+
+div.file_upload {
+    width: 80px;
+    height: 30px;
+    background: #4caf50;
+    display: inline;
+    position: absolute;
+    top: 0;
+    overflow: hidden;
+    cursor: pointer;
+    -webkit-border-top-right-radius: 5px;
+    -webkit-border-bottom-right-radius: 5px;
+    -moz-border-radius-topright: 5px;
+    -moz-border-radius-bottomright: 5px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    font-weight: bold;
+    color: #FFF;
+    text-align: center;
+    padding-top: 8px;
+}
+
+div.file_upload:before {
+    content: 'Upload';
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 5px;
+    text-align: center;
+    cursor: pointer;
+    font-size: 12px;
+    font-weight: 600;
+    text-transform: uppercase;
+    font-family: "Montserrat",sans-serif;
+}
+
+div.file_upload input {
+    cursor: pointer;
+    height: 0;
+    width: 0;
+}
+
+.date-picker-wrapper {
+    z-index: 3;
+}
+
+.currency::-webkit-inner-spin-button,
+.currency::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+.currency-input-container {
+    position: relative;
+}
+
+.currency-input-container:after {
+    content: '$';
+    position: absolute;
+    top: 5px;
+    font-weight: 600;
+    font-size: 18px;
+    right: 18%;
+    color: #999;
 }
