--- a/templates/partials/add_trip.html
+++ b/templates/partials/add_trip.html
@@ -19,7 +19,7 @@
             </label>
             <label class="form-group">
                 <span class="mandatory">Number of nights</span>
-                <input class="form-control" name="nights_no" type="text" required />
+                <input class="form-control" name="nights_no" type="number" required />
             </label>
             <label class="form-group">
                 <span class="mandatory">Price/person</span>
