--- a/public/css/style.css
+++ b/public/css/style.css
@@ -256,7 +256,7 @@ a.nav-link.btn-default {
 }
 
 /* Tours */
-section#tours, section#services, section#gallery, section#contact
+section#tours, section#services, section#all_trips, section#contact
 {
     padding-top: 60px;
 }
@@ -364,6 +364,71 @@ button.close-modal:hover {
     height: 45px;
     padding: 10px;
 }
+
+/* Rating start */
+form .stars {
+    background: url("/images/stars.png") repeat-x 0 0;
+    width: 150px;
+    margin: 0 auto;
+}
+
+form .stars input[type="radio"] {
+    position: absolute;
+    opacity: 0;
+    filter: alpha(opacity=0);
+}
+
+form .stars input[type="radio"].star-5:checked ~ span { width: 100%; }
+
+form .stars input[type="radio"].star-4:checked ~ span { width: 80%; }
+
+form .stars input[type="radio"].star-3:checked ~ span { width: 60%; }
+
+form .stars input[type="radio"].star-2:checked ~ span { width: 40%; }
+
+form .stars input[type="radio"].star-1:checked ~ span { width: 20%; }
+
+form .stars label {
+    display: block;
+    width: 30px;
+    height: 30px;
+    margin: 0!important;
+    padding: 0!important;
+    text-indent: -999em;
+    float: left;
+    position: relative;
+    z-index: 10;
+    background: transparent!important;
+    cursor: pointer;
+}
+
+form .stars label:hover ~ span { background-position: 0 -30px; }
+
+form .stars label.star-5:hover ~ span { width: 100% !important; }
+
+form .stars label.star-4:hover ~ span { width: 80% !important; }
+
+form .stars label.star-3:hover ~ span { width: 60% !important; }
+
+form .stars label.star-2:hover ~ span { width: 40% !important; }
+
+form .stars label.star-1:hover ~ span { width: 20% !important; }
+
+form .stars span {
+    display: block;
+    width: 0;
+    position: relative;
+    top: 0;
+    left: 0;
+    height: 30px;
+    background: url("/images/stars.png") repeat-x 0 -60px;
+    -webkit-transition: -webkit-width 0.5s;
+    -moz-transition: -moz-width 0.5s;
+    -ms-transition: -ms-width 0.5s;
+    -o-transition: -o-width 0.5s;
+    transition: width 0.5s;
+}
+/* Rating end */
 
 .backdrop {
     width: 100%;
