--- a/templates/partials/book_trip.html
+++ b/templates/partials/book_trip.html
@@ -1,23 +1,36 @@
 
-<script type="text/html" id='booking_modal'>
+<script type="text/html" id='booking_modal_template'>
+    <% console.log(data) %>
     <button class="close-modal">x</button>
-    <div class="row">
+    <div id="trip_modal_<%= data.id %>" class="row">
         <div class="col col-md-7">
             <div class="book-media-container">
-                <div class="video-container">
-                    <video controls id="video" class="trip-video" width="100%" height="auto">
-                        <source src="videos/tokyo.mp4" type="video/mp4" />
-                    </video>
-                </div>
+                <img src="<%= data.poster %>" alt="Trip image">
                 <div class="trip-info">
-                    <h4>Trip details</h4>
-
-                    <p>Trip with id <%= tripID %></p>
-                    <p>
-                        Bla bla bla bla bla bla nope I like potatoes hatters gonna hate bla bla bla.
-                    </p>
+                    <h3><%= data.title %></h3>
+                    <h5><%= data.short_description %></h5>
+                    <br />
+                    <div class="trip-description-container">
+                        <%= data.description %>
+                    </div>
                 </div>
             </div>
+
+            <form id="ratingsForm">
+                <div class="stars">
+                    <input type="radio" name="star" class="star-1" id="star-1">
+                    <label class="star-1" for="star-1">1</label>
+                    <input type="radio" name="star" class="star-2" id="star-2">
+                    <label class="star-2" for="star-2">2</label>
+                    <input type="radio" name="star" class="star-3" id="star-3">
+                    <label class="star-3" for="star-3">3</label>
+                    <input type="radio" name="star" class="star-4" id="star-4">
+                    <label class="star-4" for="star-4">4</label>
+                    <input type="radio" name="star" class="star-5" id="star-5">
+                    <label class="star-5" for="star-5">5</label>
+                    <span></span>
+                </div>
+            </form>
         </div>
         <div class="col col-md-5">
             <div class="book-details-container">
